<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello!</string>
    <string name="app_name">MoreAqui</string>
    <string name="newAp">Novo</string>
    <string name="searchAp">Visualizar</string>
    <string name="mapAp">Mapa</string>
    <string name="live_here">More Aqui</string>
    <string name="fone">Fone:</string>
    <string name="Tamanho">Tamanho:</string>
    <string name="Tipo">Tipo:</string>
    <string name="Pequeno">Pequeno</string>
    <string name="Medio">Medio</string>
    <string name="Grande">Grande</string>
    <string name="NaoSei">Nao Sei</string>
    <string name="Casa">Casa</string>
    <string name="Apartamento">Apartamento</string>
    <string name="Loja">Loja</string>
    <string name="EmConstrucao">Em Construção</string>
    <string name="Pronto">Pronto!</string>
    <string name="ErrorNumber">Numero de telefone possui formato invalido!</string>
    <string name="InfoSucess">Informação Inserida com sucesso!</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_list">MoreAqui</string>
    <string name="record">Gravar</string>
    <string name="title_activity_show_addresses">ShowAddressesActivity</string>

</resources>